--- a/app_init/recipes.yaml
+++ b/app_init/recipes.yaml
@@ -1,8 +1,10 @@
 recipes:
   - name: "Neapolitan Day Dough"
-    image: https://gitea.broodjeaap.net/broodjeaap/PizzaRecipes/raw/branch/master/app_init/images/neo_day_pizza.png
+    image: https://gitea.broodjeaap.net/broodjeaap/PizzaRecipes/raw/branch/master/app_init/images/nea_day_pizza.png
     description: >
       A Neapolitan Style pizza prepared in a day.  
+
+      ![cold_dough](https://gitea.broodjeaap.net/broodjeaap/PizzaRecipes/raw/branch/master/app_init/images/nea_day_pizza.png)
     ingredients:
       - name: flour
         unit: g
@@ -29,15 +31,15 @@ recipes:
           - name: Salt+Water
             description: >
               Combine the salt and the water in a bowl, stir until the salt dissolves.  
-              ![saltwater](https://gitea.broodjeaap.net/broodjeaap/PizzaRecipes/raw/branch/master/app_init/images/neo_day_saltwater.png)
+              ![saltwater](https://gitea.broodjeaap.net/broodjeaap/PizzaRecipes/raw/branch/master/app_init/images/nea_day_saltwater.png)
           - name: +20% flour
             description: >
               Add ~20% of the flour to the water/salt mixture and mix everything together.  
-              ![flour20](https://gitea.broodjeaap.net/broodjeaap/PizzaRecipes/raw/branch/master/app_init/images/neo_day_pre_yeast.png)
+              ![flour20](https://gitea.broodjeaap.net/broodjeaap/PizzaRecipes/raw/branch/master/app_init/images/nea_day_pre_yeast.png)
           - name: Yeast
             description: >
               Add the yeast to the mixture.
-              ![yeast](https://gitea.broodjeaap.net/broodjeaap/PizzaRecipes/raw/branch/master/app_init/images/neo_day_yeast.png)
+              ![yeast](https://gitea.broodjeaap.net/broodjeaap/PizzaRecipes/raw/branch/master/app_init/images/nea_day_yeast.png)
           - name: Flour
             description: >
               Add the rest of the flour to the mixture, knead the dough for 15-20 minutes.  
@@ -47,7 +49,7 @@ recipes:
 
               The result should look something like this:  
 
-              ![dough](https://gitea.broodjeaap.net/broodjeaap/PizzaRecipes/raw/branch/master/app_init/images/neo_day_dough.png)
+              ![dough](https://gitea.broodjeaap.net/broodjeaap/PizzaRecipes/raw/branch/master/app_init/images/nea_day_dough.png)
 
           - name: Rise
             description: >
@@ -57,3 +59,88 @@ recipes:
       - name: Pizza Time!
         description: >
           Time to make pizza!
+  - name: "Neapolitan Cold Rise"
+    image: https://gitea.broodjeaap.net/broodjeaap/PizzaRecipes/raw/branch/master/app_init/images/nea__pizza.png
+    description: >
+      A Neapolitan Style pizza with a multi day cold rise, giving a light and fluffy dough.
+
+      ![cold_dough](https://gitea.broodjeaap.net/broodjeaap/PizzaRecipes/raw/branch/master/app_init/images/nea_cold_pizza.png)
+    ingredients:
+      - name: flour
+        unit: g
+        value: 0.595
+      - name: water
+        unit: ml
+        value: 0.386
+      - name: salt
+        unit: g
+        value: 0.0178
+      - name: yeast
+        unit: g
+        value: 0.0012
+    steps:
+      - name: Make the dough
+        wait:
+          description: How many days cold rise?
+          unit: days
+          min: 1
+          max: 5
+        description: >
+          Combine all the ingredients to make the dough, we start with just the water and salt and add the yeast after adding some of the flour to not kill the yeast.
+
+          Check these youtube videos for more info:  
+          
+          [Pizza Dough | Basics with Babish](https://www.youtube.com/watch?v=n1O3uHPCOLA)  
+
+          [How to Make NEAPOLITAN PIZZA DOUGH like a World Best Pizza Chef](https://www.youtube.com/watch?v=8Q_9h6VKm9c)
+
+        substeps:
+          - name: Salt+Water
+            description: >
+              Combine the salt and the water in a bowl, stir until the salt dissolves.
+
+              ![salt_water](https://gitea.broodjeaap.net/broodjeaap/PizzaRecipes/raw/branch/master/app_init/images/nea_cold_salt_water.png)
+          - name: +20% flour
+            description: >
+              Add ~20% of the flour to the water/salt mixture and mix everything together.
+
+              ![pre_yeast](https://gitea.broodjeaap.net/broodjeaap/PizzaRecipes/raw/branch/master/app_init/images/nea_cold_pre_yeast.png)
+          - name: Yeast
+            description: >
+              Add the yeast to the mixture.
+
+              ![yeast](https://gitea.broodjeaap.net/broodjeaap/PizzaRecipes/raw/branch/master/app_init/images/nea_cold_yeast.png)
+          - name: Flour
+            description: >
+              Add the rest of the flour to the mixture, knead the dough for 15-20 minutes.  
+
+              You can use a mixer, or do it by hand, see [this video](https://www.youtube.com/watch?v=l9avZp3xFNU) for in depth instructions on kneading by hand.
+
+              ![kneaded](https://gitea.broodjeaap.net/broodjeaap/PizzaRecipes/raw/branch/master/app_init/images/nea_cold_kneaded.png)
+          - name: Fridge
+            description: >
+              Place the dough in a sealed/covered container in the fridge.  
+
+              ![kneaded](https://gitea.broodjeaap.net/broodjeaap/PizzaRecipes/raw/branch/master/app_init/images/nea_cold_fridge.png)
+      - name: Warm rise
+        wait:
+          description: How many hours of room temperature rise?
+          unit: hours
+          min: 3
+          max: 6
+        description: >
+          Take the dough out of the fridge and let it come to room temperature for a final rise before baking
+        substeps:
+          - name: Split
+            description: >
+              Split the dough into smaller balls and place them into a covered/sealed container(s)
+              
+              For video instructions on how to make Dough balls check out this video:  
+
+              [How to Make PIZZA DOUGH BALLS like a World Best Pizza Chef](https://www.youtube.com/watch?v=oZxNbL5XB7w)
+
+              ![kneaded](https://gitea.broodjeaap.net/broodjeaap/PizzaRecipes/raw/branch/master/app_init/images/nea_cold_ball.png)
+      - name: Pizza Time!
+        description: >
+          Time to make pizza!
+          ![pizza](https://gitea.broodjeaap.net/broodjeaap/PizzaRecipes/raw/branch/master/app_init/images/nea_cold_pizza2.png)
