fixed image tag that was supposed to be an url

--- a/app_init/recipes.yaml
+++ b/app_init/recipes.yaml
@@ -55,7 +55,7 @@ recipes:
             description: >
               Split the dough into doughballs and place the dough in a sealed/covered container at room temperature.  
 
-              ![How to make dough balls](https://www.youtube.com/watch?v=oZxNbL5XB7w)
+              [How to make dough balls](https://www.youtube.com/watch?v=oZxNbL5XB7w)
       - name: Pizza Time!
         description: >
           Time to make pizza!
